packages/pkgcraft/pkgcraft-0.0.11.tar.gz/pkgcraft-0.0.11/testdata/repos/valid/bad/eapi/unsupported/unsupported-9999.ebuild
EAPI=9999
DESCRIPTION="ebuild with unsupported EAPI"
SLOT=0
